--- a/setup.cfg
+++ b/setup.cfg
@@ -14,3 +14,7 @@ install_requires =
     click==8.1.3
     black==22.3.0
     pillow==9.1.0
+    timm==0.6.5
+    tensorboard==2.9.1
+    tqdm==4.64.1
+    numpy==1.23.0
